# n8n-inquiry-platform

./: .env.example  .gitignore  .graphifyignore  7-day-catchup-sprint.md  CLAUDE.md  Full plan.md  Plan.md  Readme.md  Sample-Readme.md  docker-compose.yml  mvp_multi_agent_customer_inquiry_handler.json  questionnaire.md  sales_inquiry.txt  smoke_test.sh  user_guide.md  whats_left.md
backend/: .dockerignore  main.py  pyproject.toml  requirements.txt
backend/app/api/: analytics.py  auth.py  executions.py  system.py  workflows.py
backend/app/core/: config.py  llm.py
backend/app/db/: client.py
backend/app/export/: csv_export.py  pdf.py  txt.py
backend/app/middleware/: auth.py
backend/templates/: inquiry_workflow.json
docs/: day-3-auth-verification.md  day-5-frontend-verification.md  day-6-execution-verification.md  day-7-analytics-verification.md  mock-sales-data.md  test-matrix.md
docs/day7-artifacts/: analytics-executions.csv  execution-8e6a956b.json  execution-8e6a956b.txt
frontend/: .dockerignore  next.config.js  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: Sidebar.tsx  StatusBar.tsx
frontend/src/lib/: api.ts  auth-context.tsx
supabase/: disable_custom_signup_trigger.sql  fix_registration_telegram_schema.sql  make_signup_trigger_non_blocking.sql  schema.sql  telegram_channel_migration.sql
(+11 files in other folders)
