[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "n8n-inquiry-backend"
version = "0.1.0"
description = "FastAPI backend for the n8n inquiry platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]==0.30.6",
    "python-dotenv==1.0.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.6.1",
    "supabase>=2.10.0",
    "httpx>=0.28.1,<1",
    "openai==1.51.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "starlette>=0.49.1,<1.0",
    "email-validator==2.2.0",
    "reportlab==4.2.2",
    "pandas==2.2.2",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true
